// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityDimensionColumn renders component 1`] = `
<li
  className="container"
>
  <div>
    <div
      className="icon"
      style={
        Object {
          "background": "rgba(41,183,112,0.085)",
          "border": "3px solid #29B770",
        }
      }
    >
      <img
        alt="Agreeableness undefined"
        src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
      />
    </div>
    <h3>
      Agreeableness
    </h3>
    <h2>
      Medium
    </h2>
  </div>
  <div
    className="background medium"
    style={
      Object {
        "background": "rgba(41,183,112,0.1)",
      }
    }
  />
</li>
`;

exports[`PersonalityDimensionColumn renders component with high score 1`] = `
<li
  className="container"
>
  <div>
    <div
      className="icon"
      style={
        Object {
          "background": "rgba(41,183,112,0.085)",
          "border": "3px solid #29B770",
        }
      }
    >
      <img
        alt="Agreeableness undefined"
        src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
      />
    </div>
    <h3>
      Agreeableness
    </h3>
    <h2>
      Medium
    </h2>
  </div>
  <div
    className="background high"
    style={
      Object {
        "background": "rgba(41,183,112,0.1)",
      }
    }
  />
</li>
`;

exports[`PersonalityDimensionColumn renders component with low score 1`] = `
<li
  className="container"
>
  <div>
    <div
      className="icon"
      style={
        Object {
          "background": "rgba(41,183,112,0.085)",
          "border": "3px solid #29B770",
        }
      }
    >
      <img
        alt="Agreeableness undefined"
        src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
      />
    </div>
    <h3>
      Agreeableness
    </h3>
    <h2>
      Medium
    </h2>
  </div>
  <div
    className="background low"
    style={
      Object {
        "background": "rgba(41,183,112,0.1)",
      }
    }
  />
</li>
`;

exports[`PersonalityDimensionColumn renders component with medium score 1`] = `
<li
  className="container"
>
  <div>
    <div
      className="icon"
      style={
        Object {
          "background": "rgba(41,183,112,0.085)",
          "border": "3px solid #29B770",
        }
      }
    >
      <img
        alt="Agreeableness undefined"
        src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
      />
    </div>
    <h3>
      Agreeableness
    </h3>
    <h2>
      Medium
    </h2>
  </div>
  <div
    className="background medium"
    style={
      Object {
        "background": "rgba(41,183,112,0.1)",
      }
    }
  />
</li>
`;
